# ProjectDrift

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker_readme.md  run_app.sh  sample.py  setup.sh
.github/: CODEOWNERS
docs/msp/: pyMsp_docs.md
python_wrappers/: CMakeLists.txt  pyMsp.cpp
src/: CMakeLists.txt  main.cpp  project_config.json
src/utilities/: CMakeLists.txt
src/utilities/config/: CMakeLists.txt  config.cpp  config.h
src/utilities/msp/: CMakeLists.txt  msp.cpp  msp.h  msp_codes.h  msp_codes.hpp  msp_datatypes.cpp  msp_datatypes.h  msp_vtx.h
src/utilities/serial/: CMakeLists.txt  serial.cpp  serial.h
toolchains/: toolchain_pi.cmake  toolchain_posix.cmake  toolchain_zero.cmake
toolchains/raspberrypi-sysroot/usr/lib/python3.9/: _sysconfigdata__arm-linux-gnueabihf.py
toolchains/raspberrypi-sysroot/usr/lib/python3.9/config-3.9-arm-linux-gnueabihf/: Makefile
